2009-06-30  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#122957 - There is warning message in console when engine
	cannot load bookmark file

	* src/hd-bookmark-manager.c
	  (hd_bookmark_manager_monitor_bookmark_files): Do not use operator
	  bookmark file.

	* debian/changelog: Update.

2009-06-29  Aapo Kojo <aapo.kojo@nokia.com>

	Released 0.3.36

	* configure.ac: 0.3.36

2009-06-29  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#110233 - Possible memory leak in hildon-home

	* src/hd-incoming-event-window.c (hd_incoming_event_window_finalize):
	Fix leaking prov->destination.

	* src/hd-notification-manager.c (hd_notification_manager_db_prepare):
	Fix leaking sqlite prepared statements. Really reuse them.
	  (hd_notification_manager_notify): Fix leaking actions_copy.

	* debian/changelog: Update.

2009-06-29  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes for update of libhildondesktop regarding NB#123171 and
	NB#123195.

	* src/hd-activate-views-dialog.c (hd_activate_views_dialog_init): Put
	in the container.

	* src/hd-applet-manager.c (plugin_module_added_cb,
	  plugin_module_removed_cb): Fix module adding/removing.

	* debian/changelog: Update.

2009-06-22  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.35

	* configure.ac: 0.3.35

2009-06-17  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#120369 - theme is not applied in layoutmode after flash

	* src/hd-hildon-home-dbus.c: Create menu when intialized instead of
	when it is first shown, so it gets notified about theme changes.

2009-06-15  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.34

	* configure.ac: 0.3.34

2009-06-15  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#120367 - hildon-home-76CD-11 crash observed while in layout
	mode
	Fixes: NB#120884 - Dialog for changing wallpaper too high
	Fixes: NB#110192 - Background Image update 'Stop' button does not work
	Fixes: NB#120626 - Number of notifications is not coming in task